--- a/src/frontend/components/ProjectEntryPage/smallProjectEntry.module.css
+++ b/src/frontend/components/ProjectEntryPage/smallProjectEntry.module.css
@@ -196,7 +196,7 @@
   left: 0;
   width: 100%;
   height: 25px;
-  background: linear-gradient(to bottom, rgba(50, 50, 50, 0), rgb(38, 38, 38));
+  background: linear-gradient(to bottom, rgba(50, 50, 50, 0), rgba(38, 38, 38, 0.608));
 }
 
 .previewText::after {
@@ -281,7 +281,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #333333;
+  background-color: #2a2a2a;
   padding: 10px 15px;
   border-radius: 8px;
   margin: 20px 0 15px 0;
