--- a/src/frontend/components/tagsFeed.module.css
+++ b/src/frontend/components/tagsFeed.module.css
@@ -14,6 +14,15 @@
     width: 100%;
   }
 
+  .emptyState{
+    color: rgba(255, 255, 255, 0.468); 
+    text-align: center;
+    font-weight: bolder;
+    margin: 10px; 
+    padding: 10px; 
+    font-size: 25px;
+  }
+
   .buttonContainer {
     display: flex;
     justify-content: space-around;
