--- a/src/frontend/pages/FeedPage/feed.module.css
+++ b/src/frontend/pages/FeedPage/feed.module.css
@@ -255,6 +255,37 @@ body {
   position: relative;
 }
 
+.emptyState{
+  color: rgba(255, 255, 255, 0.468); 
+  text-align: center;
+  font-weight: bolder;
+  margin: 10px; 
+  padding: 10px; 
+  font-size: 25px;
+}
+
+.emptyButton{
+  display: inline-flex; 
+  align-items: center;
+  gap: 10px; 
+  background-color: #4a90e2;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  padding: 8px 16px;
+  font-size: 20px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+  margin-left: 10px;
+  white-space: nowrap;
+}
+
+.emptyButton:hover {
+  background-color: #3a7bc8;
+  cursor: pointer;
+}
+
 .closeButton {
   position: absolute;
   top: 10px;
