--- a/src/frontend/pages/StudentProfilePage/studentProfile.module.css
+++ b/src/frontend/pages/StudentProfilePage/studentProfile.module.css
@@ -103,29 +103,29 @@
 
   .bigButtonAdd {
     display: inline-block;
-    font-family: inconsolata;
-    margin-right: 5px; /* Adjust margin to make buttons less wide */
-    margin-bottom: 0px;
-    padding: 8px 16px;
-    background-color: #2e3e50;
+    font-family: 'inconsolata';
+    font-weight: bolder; 
+    margin-right: 20px; /* Adjust margin to make buttons less wide */
+    margin-bottom: 10px;
+    margin-top: 10px; 
+    background-color: rgb(30,30,30); 
     color: #D9D9D9;
-    border: none;
-    border-radius: 8px;
+    border: 2px solid rgb(130, 130, 130);
+    border-radius: 10px;
     cursor: pointer;
     height: 60px;
     width: calc(100% / 2 - 30px); /* Adjusted calculation */
-    font-size: 20px;
+    font-size: 18px;
     margin-left: 20px; /* Adjust margin to make buttons less wide */
     transition: background-color 0.3s ease;
     display: inline-flex;
     align-items: center;
-    border: 1px solid #c3c3c3;
     justify-content: center;
-    gap: 10px; 
+    gap: 20px; 
   }
 
   .bigButtonAdd:hover {
-    background-color: #537c9b;
+    background-color: #2a3339;
     color: white;
   }
   
